# study-opencv

./: CMakeLists.txt  README.md  main.cpp  requirements.txt  test.py
chapter01/: roi.cpp  test.py
chapter02/: example2_1.cpp  example2_3.cpp  read_and_save.py  sift.py
docs/: README.md
lab1/openCVDemo1/: main.cpp
lab2/: task1.cpp  task2.cpp
lab3/: calibdata.txt  caliberation_result.txt  camera_calibration.cpp  task1.cpp  test.cpp  test2.cpp
lab6/: test2.py  test3.py
test/: clock.cpp  geometric.py  put_text.cpp  test.cpp
